--- a/app/src/main/res/layout/activity_car_add_edit.xml
+++ b/app/src/main/res/layout/activity_car_add_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.connriver.connrail.CarAddEdit"
+    tools:context="com.connriver.connrail.CarAddEditActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true">
@@ -22,7 +22,7 @@
                 android:layout_weight=".3"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/etCarInitials"
                     android:maxLines="1"
                     android:hint="@string/hint_init"
@@ -40,7 +40,7 @@
                 android:layout_weight=".3"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/etCarNumber"
                     android:inputType="number"
                     android:maxLines="1"
@@ -79,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/etCarNotes"
                 android:maxLines="1"
                 android:hint="@string/hint_notes"
