--- a/app/src/main/res/layout/activity_car_info.xml
+++ b/app/src/main/res/layout/activity_car_info.xml
@@ -98,7 +98,52 @@
                     android:text="Track" />
             </LinearLayout>
 
-        </LinearLayout>
+             <LinearLayout
+                 android:id="@+id/llCurrLading"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:visibility="gone"
+                 android:orientation="horizontal">
+                 <TextView
+                     android:layout_marginLeft="@dimen/activity_vertical_margin"
+                     android:layout_width="0dp"
+                     android:layout_weight=".3"
+                     android:gravity="right"
+                     android:layout_height="wrap_content"
+                     android:text="@string/lading" />
+                 <TextView
+                     android:id="@+id/tvCurrLading"
+                     android:layout_marginLeft="@dimen/small_margin"
+                     android:layout_width="0dp"
+                     android:layout_weight=".7"
+                     android:layout_height="wrap_content"
+                     android:text="[lading]" />
+             </LinearLayout>
+
+             <LinearLayout
+                 android:id="@+id/llCurrInstructions"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:visibility="gone"
+                 android:orientation="horizontal">
+                 <TextView
+                     android:layout_marginLeft="@dimen/activity_vertical_margin"
+                     android:layout_width="0dp"
+                     android:layout_weight=".3"
+                     android:gravity="right"
+                     android:layout_height="wrap_content"
+                     android:text="@string/instructions" />
+                 <TextView
+                     android:id="@+id/tvCurrInstructions"
+                     android:layout_marginLeft="@dimen/small_margin"
+                     android:layout_width="0dp"
+                     android:layout_weight=".7"
+                     android:layout_height="wrap_content"
+                     android:text="[inst]" />
+             </LinearLayout>
+
+
+         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llNoCurrent"
