--- a/app/src/main/res/layout/activity_import_export.xml
+++ b/app/src/main/res/layout/activity_import_export.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.connriver.connrail.NetworkSettings">
+    tools:context="com.connriver.connrail.ImportExportActivity">
 
     <Button
         android:id="@+id/btnImport"
