--- a/app/src/main/res/layout/activity_spot_add_edit.xml
+++ b/app/src/main/res/layout/activity_spot_add_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.connriver.connrail.SpotAddEdit"
+    tools:context="com.connriver.connrail.SpotAddEditActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/etSpotIndustry"
                 android:layout_margin="@dimen/small_margin"
                 android:maxLines="1"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/etSpotTrack"
                 android:maxLines="1"
                 android:hint="@string/hint_track"
