--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,14 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_network_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_network_settings"
+        android:id="@+id/action_user_type"
+        android:title="@string/action_user_type"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_import_export"
+        android:title="@string/action_import_export"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_end"
-        android:orderInCategory="100"
-        android:icon="@android:drawable/ic_menu_close_clear_cancel"
         android:title="@string/action_end"
         app:showAsAction="never" />
 
